[PostVersions] Fix source overflow for long unhyphenated URLs

--- a/app/javascript/src/styles/specific/post_versions.scss
+++ b/app/javascript/src/styles/specific/post_versions.scss
@@ -156,6 +156,7 @@ div#c-post-versions {
     .pv-sources {
       grid-row: 4;
       @include grid-col(10, 14);
+      overflow-wrap: anywhere;
     }
 
     .pv-actions {
